# pandas-studies

./: pyproject.toml
data/: clientes.csv
dia01/: 02_series.py
dia02/: 03_series_index.py  04_dataframes;py
