[project]
name = "teo-me-why-pandas"
version = "0.1.0"
description = ""
authors = [
    {name = "Gabriel Salles",email = "gs.amaral20@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (>=3.0.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
